# advent-of-code-2022

./: Makefile  pyproject.toml
aoc/day_2/: day_two.py  test_day_two.py
aoc/day_eight/: day_eight.py  test_day_eight.py
aoc/day_five/: day_five.py  test_day_five.py
aoc/day_four/: day_four.py  test_day_four.py
aoc/day_one/: day_one.py  test_day1.py  test_day_one.py
aoc/day_seven/: day_seven.py  test_day_seven.py
aoc/day_six/: day_six.py  test_day_six.py
aoc/day_three/: day_three.py  test_day_three.py
aoc/day_two/: day_two.py  test_day_two.py
aoc/utilities/: test_utils.py  utils.py
day_1/: test_main.py
